[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pylog"
authors = [{name = "Russ Abbott", email = "Russ.Abbott@gmail.com"},
            {name = "Jay Patel", email = "imjaypatel12@gmail.com"}]
requires-python = ">=3.7"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
        'Development Status :: 3 - Alpha',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3.7',
        'Topic :: Software Development :: Libraries :: Python Modules',]
version="1.1.1.dev1"        
description="Python implementation of Prolog features."
keywords=["prolog,logic programming"]

[project.urls]
Home = "https://github.com/RussAbbott/pylog"

[project.optional-dependencies]
build= ["build"]
test=["pytest >= 7.4.0"]
dev= ["build"]

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]